fixed wrapping bug

--- a/index.css
+++ b/index.css
@@ -6,16 +6,17 @@
 	outline: none;
 }
 
-
-td {word-wrap: break-word;}
-
 body, html {
 	overflow: hidden;
-	background-color: rgba(0, 0, 0, 0.01)
+	background-color: rgba(0, 0, 0, 0.01);
 }
 
-table * {
-	white-space: pre-line;
+td {
+	word-wrap: break-word!important;
+	max-width: calc(100vw/10)!important;
+    text-overflow: wrap;
+    white-space: normal;
+    overflow: hidden;
 }
 
 #ipMapInfoCard {
@@ -236,5 +237,13 @@ thead {
 	}
 	.modal-header h4 span {
 		font-size: 15px;
+	}
+
+	td {
+		word-wrap: break-word!important;
+		max-width: calc(100vw/3)!important;
+	    text-overflow: wrap;
+	    white-space: normal;
+	    overflow: hidden;
 	}
 }
